--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,25 +11,29 @@
             android:name=".SplashScreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@style/FullscreenTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" />
+            android:label="@string/title_activity_main"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".IngredientActivity"
-            android:label="@string/title_activity_ingredient" />
+            android:label="@string/title_activity_ingredient"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ConversionActivity"
-            android:label="@string/title_activity_conversion"></activity>
+            android:label="@string/title_activity_conversion"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".RecipeActivity"
-            android:label="@string/title_activity_recipe"></activity>
+            android:label="@string/title_activity_recipe"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
