--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
-        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".NewRecipeActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait" />
         <activity
@@ -29,7 +29,7 @@
         <activity
             android:name=".ConversionActivity"
             android:label="@string/title_activity_conversion"
-            android:parentActivityName=".activities.RecipeActivity"
+            android:parentActivityName=".RecipeActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".RecipeActivity"
