--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".NewRecipeActivity"
             android:label="@string/title_activity_main"
+            android:parentActivityName=".RecipeActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".IngredientActivity"
