--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ android {
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile files('libs/something_local.jar')
 }
