--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,11 @@ android {
         versionName "1.0"
     }
 
+/*
     lintOptions {
         abortOnError false
     }
+*/
 
     buildTypes {
         release {
@@ -32,5 +34,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
-    compile files('libs/something_local.jar')
+}
+
+repositories {
+    maven { url 'http://dl.bintray.com/baoyongzhang/maven' }
+}
+
+dependencies {
+    compile('com.baoyz.swipemenulistview:library:1.3.0@aar')
 }
