--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        mario {
+            keyAlias 'mario'
+            keyPassword 'phaejoht'
+            storeFile file('/home/mario/android_signs.jks')
+            storePassword 'phaejoht'
+        }
+    }
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "recipeconverter.org.recipeconverter"
         minSdkVersion 15
@@ -11,18 +18,23 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
 /*
     lintOptions {
         abortOnError false
     }
 */
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        incremental false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
     }
 }
 
